Fix img-list gap on older Safari

--- a/resources/scss/components/_img-list.scss
+++ b/resources/scss/components/_img-list.scss
@@ -1,4 +1,5 @@
 $img-list-gap: 12px;
+$img-list-bottom-gap: 24px;
 $img-list-item-width: 320px;
 $img-list-breakpoint-1: 480px;
 $img-list-breakpoint-2: (($img-list-item-width + $img-list-gap) * 2) + $img-list-gap;
@@ -6,10 +7,9 @@ $img-list-breakpoint-2: (($img-list-item-width + $img-list-gap) * 2) + $img-list
 #img-list {
 	display: flex;
 	flex-wrap: wrap;
-	gap: 24px $img-list-gap;
 	justify-content: center;
 	list-style: none;
-	margin: 8px 0 0;
+	margin: 8px #{$img-list-gap / -2} #{$img-list-bottom-gap * -1};
 	padding: 0;
 
 	@media (min-width: #{$img-list-breakpoint-1}) {
@@ -18,6 +18,7 @@ $img-list-breakpoint-2: (($img-list-item-width + $img-list-gap) * 2) + $img-list
 }
 
 .img-list__item {
+	margin: 0 #{$img-list-gap / 2} $img-list-bottom-gap;
 	width: auto;
 
 	@media (min-width: #{$img-list-breakpoint-1}) {
